--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,7 @@
         <br>
         <div class="center text-big bold">
             Hi! I am sunder and  this is my webapp.
-        </div>  A new heading   </h4>
+        </div> class="center text-big bold"> A new heading   </h4>
           i have made some local changes
         <script type="text/javascript" src="/ui/main.js">
         </script>
