--- a/ui/index.html
+++ b/ui/index.html
@@ -5,12 +5,12 @@
     </head>
     <body>
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img src="png" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
             Hi! I am sunder and  this is my webapp.
-        </div> class="center text-big bold">
+        </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
