[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="https://pbs.twing.com/profile-images/896346762595586048/6ohG6p8f.png" class="img-medium"/>
+            <img src="https://pbs.twing.com/profile-images/896346762595586048/6ohG6p8f.jpg" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
